--- a/index.html
+++ b/index.html
@@ -77,16 +77,10 @@
      <p class="p7">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p8">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p9">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p> -->
-     <div class="example-block">
-       block tag <br>
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-       dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </div>
-     <span class="example-string">
-       Строчный тэг <br>
-       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </span>
-     <img class="example-img" src="img/fom.jpg" alt="">
-  </body>
+     <h1 id="htr">Заголhgfrfghhgfdовок 1</h1>
+     <a href="secv.html" target="_blank">rtyuhg</a>
+     
+    </body>
+    <script type="text/javascript" src="javascript/main.js"></script>
 </html>
+
