--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
      <h1 id="htr">Заголhgfrfghhgfdовок 1</h1>
      <a href="secv.html" target="_blank">rtyuhg</a>
      <h2>uiklkjhgf</h2>
+     <button>hello word</button>
     </body>
     <script type="text/javascript" src="javascript/main.js"></script>
 </html>
