--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
      <a href="secv.html" target="_blank">rtyuhg</a>
      <h2>uiklkjhgf</h2>
      <button>hello word</button>
+     <textarea name="dis" cols="30" rows="10"></textarea>
     </body>
     <script type="text/javascript" src="javascript/main.js"></script>
 </html>
