--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
      <h1 id="htr">Заголhgfrfghhgfdовок 1</h1>
      <a href="secv.html" target="_blank">rtyuhg</a>
      <h2>uiklkjhgf</h2>
-     <button>hello word</button>
+     tyhk     <button>hello word</button>
      <textarea name="dis" cols="30" rows="10"></textarea>
     </body>
     <script type="text/javascript" src="javascript/main.js"></script>
