--- a/secv.html
+++ b/secv.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/second__page.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">rtyuhg</a>
+    <h1>second page</h1>
+    <a href="index.html">link to first page</a>
 </body>
 </html>
