--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
      <p class="p7">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p8">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p9">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p> -->
-     <h1 id="htr">Заголhgfrfghhgfdовок 1</h1>
-     <a href="secv.html" target="_blank">rtyuhg</a>
-     <h2>uiklkjhgf</h2>
-     tyhk     <button>hello word</button>
-     <textarea name="dis" cols="30" rows="10"></textarea>
+     <h1 id="htr">first page</h1>
+     <a href="secv.html" target="_blank">link to second page</a>
+     <h2>form</h2>
      
+     <textarea id="text" name="dis" cols="30" rows="10"></textarea>
+     <button id="btn">hello word</button>
     </body>
     <script type="text/javascript" src="javascript/main.js"></script>
 </html>
