--- a/index.html
+++ b/index.html
@@ -76,14 +76,34 @@
      <p class="p6">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p7">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
      <p class="p8">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p><br>
-     <p class="p9">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p> -->
-     <h1 id="htr">first page</h1>
+     <!-- <p class="p9">Сверстай этот макет используя все свойства о который мы говорил в этом видео</p> -->
+     <!--<h1 id="htr">first page</h1>
      <a href="secv.html" target="_blank">link to second page</a>
-     <h2>form</h2>
+     <h2>form</h2> --
      
      <textarea id="text" name="dis" cols="30" rows="10"></textarea>
-     <button id="btn">hello word</button>
+     <button id="btn">hello word</button> -->
+     <h1>ciusxkjcxs  </h1>
+     <h2>bvdccnvmjchgxhc</h2>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima hic quisquam quas inventore, non debitis dolor atque! Optio aut fugit molestiae, corporis natus et hic assumenda minus suscipit ullam? Voluptatibus.</p>
+     <img src="img/fom.jpg" alt="">
+     <div>
+       <p>ghjkjhgf</p>
+     </div>
+     <div>
+       <input type="checkbox">ioiuii <br>
+       <input type="checkbox">ioiuii <br>
+       <input type="checkbox">ioiuii  <br>
+       <input type="checkbox">ioiuii
+     </div>
+     
+     <div>
+      <input type="radio">ioiuii <br>
+      <input type="radio">ioiuii <br>
+      <input type="radio">ioiuii  <br>
+      <input type="radio">ioiuii
+    </div>
     </body>
-    <script type="text/javascript" src="javascript/main.js"></script>
+    <!-- <script type="text/javascript" src="javascript/main.js"></script> -->
 </html>
 
