--- a/secv.html
+++ b/secv.html
@@ -9,5 +9,29 @@
 <body>
     <h1>second page</h1>
     <a href="index.html">link to first page</a>
+    <!-- <img src="img/fom.jpg" alt="znak"> -->
+    <div id="timer" class="time">0</div>
+    <div class="marg">
+        hgfd
+    </div>
+    <table>
+        <tr>
+            <td>fghjk</td>
+            <td>tff</td>
+        </tr>
+        <tr>
+            <td>rghj</td>
+            <td>hgggfdf</td>
+        </tr>
+        <tr>
+            <td>cfghj</td>
+            <td>kjhg</td>
+        </tr>
+    </table>
+    <video height="100px" width="100px" controls>
+        <source src="https://youtu.be/ILbNh3oNSLA" type="video">
+    </video>
+    <input type="time">
 </body>
+<script type="text/javascript" src="javascript/"></script>
 </html>
