--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="stylesheet" href="css/nullstyle.css"> -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/nullstyle.css">
     <title>My first project</title>
   </head>
   <body>
@@ -92,10 +92,10 @@
        <p>ghjkjhgf</p>
      </div>
      <div>
-       <input type="checkbox">ioiuii <br>
-       <input type="checkbox">ioiuii <br>
-       <input type="checkbox">ioiuii  <br>
-       <input type="checkbox">ioiuii
+       <input class="type_chack" type="checkbox">ioiuii 
+       <input class="type_chack" type="checkbox">ioiuii 
+       <input class="type_chack" type="checkbox">ioiuii 
+       <input class="type_chack" type="checkbox">ioiuii
      </div>
      
      <div>
@@ -154,8 +154,8 @@
       <video controls>
         <source src="" type="video/mp4">
         <source src="" type="audio/mpeg">
-      </video>
-      <code></code>
+      </video> <br>
+      <code>code!! <br> var i =0 </code>
 
     </div>
     </body>
