--- a/meta.html
+++ b/meta.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0"> -->
     <title>meta tag</title>
+    <link rel="stylesheet" href="css/nullstyle.css">
     <link rel="stylesheet" href="css/meta.css">
     <!-- <meta charset="UTF-8"> -->
     <meta name="viewport" content="width=device-width"> 
@@ -13,6 +14,6 @@
 <body>
     <h1>Богдан здесь</h1>
     <h2>Мета тэги </h2>
-    
+    <p>test</p>
 </body>
 </html>
